--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.1.0",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-camera": "~13.4.4",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.10",
+    "react-native-maps": "1.7.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "3.2.4"
   },
   "private": true
 }
